--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ button
 .box {
     width: 100px;
     height: 100px;
-    border: 2px solid black;
+    border: 3px solid blue;
     border-radius: 10pt;
 }
 
@@ -149,6 +149,7 @@ button
     justify-content: space-between;
     margin: 50px;
     gap: 20px;
+    border-radius: 10px;
     
 }
 
@@ -157,11 +158,7 @@ button
 }
 
 .cat-right {
-    margin-right: 50px;
-}
-
-.white-button {
-    border: 2px solid white;
+    margin-right: 20px;
 }
 
 .cat-text {
@@ -172,5 +169,34 @@ button
 
 .cat-second {
     font-size: 18px;
+    font-weight: 200;
+}
+
+.quote {
+    background-color: lightgrey;
+    display: flex;
+    flex-direction: column;
+}
+
+.ttop {
+    font-size: 36px;
+    font-weight: light italic;
+    color: #1f2937;
+    padding: 50px;
+}
+
+.bbottom {
+    color: #1f2937;
+    font-weight: 800;
+    display: flex;
+    justify-content: end;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: -20px;
+}
+
+.abutton {
+    background-color: whitesmoke;
+    color: #3882f6;
     font-weight: 200;
 }
